# squeal

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  flake.nix  test.db
src/: main.rs
