[package]
name = "squeal"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
edtui = { version = "0.10", features = ["syntax-highlighting"] }
futures = "0.3"
ratatui = "0.30"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
